# mlb_showdown_card_bot

./: .gitignore  .slugignore  CLAUDE.md  PATCH_NOTES.md  Procfile  README.md  app.py  config.py  main.py  package.json  pyproject.toml  random_players.csv  requirements.txt  setup.py  test.py  test_compare_version_output.py  test_weights.py
.github/workflows/: snapshot_rosters.yml
data/: mlb_showdown_player_card_data.xlsx
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
lambda/handlers/: card_of_the_day.py
mlb_showdown/: baseball_ref_scraper.py  showdown_constants.py  showdown_player_card_generator.py  showdown_set_accuracy.py  tests.py
mlb_showdown_bot/: __init__.py  __main__.py  baseball_ref_scraper.py  firebase.py  mlb_stats_api.py  nicknames.csv  player_ids.csv  postgres_db.py  showdown_constants.py  showdown_player_card.py  showdown_player_card_generator.py  version.py  wotc_player_cards.py
mlb_showdown_bot/api/: card_db.py  cards.py  feature_status.py  gallery.py  metadata.py  schedule.py  search.py  seasons.py  stats.py  team_builder.py  user_settings.py  user_teams.py
mlb_showdown_bot/classes/: chart.py  colors.py  icon.py  images.py  metadata.py  metrics.py  nationality.py  player_position.py  points.py  sets.py  shared_functions.py  speed.py  stat_highlights.py  stats_period.py  team.py  value_range.py
mlb_showdown_bot/cli/: main.py
mlb_showdown_bot/core/: __init__.py  version.py
mlb_showdown_bot/data/: mlb_averages.csv  wotc_player_card_set.csv  wotc_player_card_set.json
mlb_showdown_bot/enums/: chart.py  edition.py  icon.py  images.py  nationality.py  player_position.py  sets.py  team.py
mlb_showdown_bot/scripts/: all_star_game_set.py  auto_image_suggestions.py  auto_image_suggestions_current_year.py  chart_era_adj_analyzer.py  compare_wotc_to_showdown_bot.py  convert_wotc_to_showdown_bot.py  export_showdown_bot.py  nicknames.py  test_card_generation.py  wotc_to_showdown_bot_comparison.py  wotc_to_showdown_bot_conversion.py
scripts/: auto_image_suggestions.py
static/front_end/: script.js  script_1_1.js  script_2_3.js  script_2_5.js  script_2_6.js  script_3_0_3.js  script_3_0_6.js  script_3_1.js  script_3_2.js  script_3_3.js  script_3_4.js  script_3_4_8.js  script_3_4_81.js  script_3_4_82.js  script_3_5.js  script_3_5_1.js  script_3_6.js  script_3_6_1.js  script_3_6_2.js  script_3_7.js  script_3_7_1.js  script_3_7_2.js  script_3_8.js  script_3_8_1.js  script_3_9_12.js  script_3_9_2.js  script_3_9_3.js  (+7 more)
templates/: index.html  main_screen.html
tests/: requirements.txt  showdown_set_accuracy.py  test_compare_version_output.py  test_constants.py  test_img_library.py  test_sets.py  test_simulation.py  test_team_background_images.py  tests.py
(+236 files in other folders)
