[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-showdown-bot"
version = "4.0"
description = "Create custom MLB Showdown cards"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Unlicense"}
authors = [
    { name = "Matthew Gula", email = "mlbshowdownbot@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]
dependencies = [
    "aenum>=3.1.15",
    "apiclient>=1.0.4",
    "beautifulsoup4>=4.9.3",
    "bs4>=0.0.1",
    "firebase-admin>=6.0.1",
    "google>=3.0.0",
    "google-api-python-client>=2.7.0",
    "lxml>=4.6.1",
    "numpy>=1.19.4",
    "oauth2client>=4.1.3",
    "pandas>=1.1.4",
    "Pillow>=7.2.0",
    "pydantic>=2.4.2",
    "requests>=2.25.0",
    "simplejson>=3.17.6",
    "typer>=0.16.0",
    "Unidecode==1.2.0",
    "urllib3>=1.26.2",
    "webcolors>=1.13",
    "xlrd>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/mgula57/mlb_showdown_card_bot"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb_showdown_bot*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
showdown_bot = "mlb_showdown_bot.cli.main:app"