[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-showdown-bot"
version = "4.0"
description = "Create custom MLB Showdown cards"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "Unlicense"
authors = [
    { name = "Matthew Gula", email = "mlbshowdownbot@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "aenum>=3.1.15",
    "apiclient>=1.0.4",
    "beautifulsoup4>=4.9.0",
    "chardet>=3.0.4",
    "cloudscraper>=1.2.71",
    "firebase-admin>=6.0.1",
    "Flask-Cors>=4.0.0",
    "google-api-python-client>=2.62.0",
    "gunicorn>=23.0.0",
    "lxml>=4.6.0",
    "numpy>=1.19.4",
    "oauth2client>=4.1.3",
    "openpyxl>=3.0.10",
    "pandas>=1.3.0",
    "Pillow>=10.3.0",
    "prettytable>=3.7.0",
    "psycopg2",
    "pydantic>=2.4.2",
    "python-dotenv>=0.9.9",
    "simplejson>=3.17.6",
    "termcolor>=2.0.1",
    "thefuzz>=0.22.1",
    "typer>=0.16.0",
    "Unidecode>=1.2.0",
    "webcolors>=1.13",
    "xlrd>=2.0.1"
]

[project.optional-dependencies]
dev = [
    "pip-chill>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/mgula57/mlb_showdown_card_bot"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlb_showdown_bot*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
showdown_bot = "mlb_showdown_bot.cli.main:app"